# mcmailer

./: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.setup.ts
src/: App.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: account.rs  commands.rs  db.rs  gmail.rs  gmail_commands.rs  history.rs  lib.rs  main.rs  notification_commands.rs  notification_service.rs  oauth.rs  polling.rs  pubsub_message.rs  pubsub_pull.rs  sse_client.rs  token.rs  types.rs  watch.rs
src-tauri/tests/: account_test.rs  db_test.rs  db_watch_state_test.rs  event_constants_test.rs  gmail_test.rs  history_test.rs  notification_dedup_test.rs  notification_settings_db_test.rs  notification_settings_test.rs  oauth_test.rs  pubsub_message_test.rs  sse_backoff_test.rs  sse_notification_parse_test.rs  token_test.rs  watch_test.rs
src/__tests__/: App.test.tsx
src/features/accounts/: AccountSwitcher.tsx  useAccounts.ts
src/features/accounts/__tests__/: AccountSwitcher.test.tsx  useAccounts.test.ts
src/features/auth/: AuthScreen.tsx  useAuth.ts
src/features/auth/__tests__/: AuthScreen.test.tsx  useAuth.test.ts
src/features/mail/: MailDetail.tsx  MailList.tsx  MailScreen.tsx  useMails.ts  useNewMailNotification.ts
src/features/mail/__tests__/: MailDetail.test.tsx  MailList.test.tsx  MailScreen.test.tsx  header-bar.test.tsx  mail-list-item.test.tsx  mail-screen-notification-integration.test.tsx  useMails.test.ts  useNewMailNotification.test.ts
src/shared/: commands.ts  events.ts  types.ts
src/shared/__tests__/: commands.test.ts  events.test.ts  notification-commands.test.ts
(+2 files in other folders)
